--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,22 +1,15 @@
-pre{
-  white-space: pre-wrap;
+pre {
+  white-space: pre-line;
+}
+
+a {
+  outline: none;
 }
 
 .list-group-item {
   outline: none;
 }
 
-.fab {
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  position: fixed;
-  right: 40px;
-  bottom: 40px;
-  z-index: 990;
-  -webkit-font-smoothing: antialiased;
-}
-
-:host-context(.modal-open) .fab {
-  margin-right: 17px;
+.clickable {
+  cursor: pointer;
 }
