Move electron files to separate folder Fix electron packager not copy native node modules Fix command trigger not report error Fix assets relative path

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header class="sticky-top">
   <nav class="navbar navbar-dark bg-primary">
     <a class="navbar-brand" href="#" draggable="false">
-      <img src="/assets/script.svg" width="30" height="30" class="d-inline-block align-top" alt=""> Script Trigger
+      <img src="assets/script.svg" width="30" height="30" class="d-inline-block align-top" alt=""> Script Trigger
     </a>
     <div class="form-inline ml-auto">
       <button type="button" class="btn btn-outline-light mr-2" (click)="onNew(); commandForm.form.reset();" data-toggle="modal" data-target="#commandModal">New</button>
