Add ngx-bootstrap to move boostrap and jquery out of native.js Move bytesize icons to separate components

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,10 +6,18 @@ a {
   outline: none;
 }
 
-.list-group-item {
-  outline: none;
-}
-
 .clickable {
   cursor: pointer;
+}
+
+bs-sortable /deep/ .list-group {
+  /deep/ .list-group-item {
+    .showOnHover {
+      visibility: hidden;
+    }
+  
+    &:hover .showOnHover {
+      visibility: inherit;
+    }
+  }
 }
