--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,17 +4,14 @@
       <img src="assets/script.svg" width="30" height="30" class="d-inline-block align-top" alt=""> Script Trigger
     </a>
     <div class="form-inline ml-auto">
-      <button type="button" class="btn btn-outline-light mr-2" (click)="onNew(); commandForm.form.reset();" data-toggle="modal" data-target="#commandModal">New</button>
+      <button type="button" class="btn btn-outline-light mr-2" (click)="onNew(); commandForm.form.reset(); commandModal.show();">New</button>
       <div class="input-group">
         <div class="input-group-prepend">
           <div class="input-group-text">
-            <svg id="i-search" viewBox="0 0 32 32" width="16" height="16" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3">
-              <circle cx="14" cy="14" r="12" />
-              <path d="M23 23 L30 30" />
-            </svg>
+            <app-bytesize-icon id="i-search"></app-bytesize-icon>
           </div>
         </div>
-        <input [(ngModel)]="keyword" class="form-control" type="search" placeholder="Filter">
+        <input [(ngModel)]="keyword" (ngModelChange)="filter()" class="form-control" type="search" placeholder="Filter">
       </div>
     </div>
   </nav>
@@ -22,46 +19,49 @@
 
 <main>
   <div class="fluid-container">
-    <div class="list-group list-group-flush">
-      <div *ngFor="let command of filteredCommands()" class="list-group-item list-group-item-action flex-column align-items-start">
-        <div class="d-flex w-100">
-          <h5 class="text-primary clickable" (click)="onEdit(command)" data-toggle="modal" data-target="#commandModal">
-            {{command.id}}.
-            <a draggable="false">{{command.name}}</a>
-          </h5>
-          <small class="ml-auto" *ngIf="command.lastRunAt">{{command.lastRunAt | amTimeAgo}}</small>
-        </div>
-        <div class="d-flex w-100 align-items-center">
-          <pre class="my-1 mr-3"><code highlight [code]="command.script"></code></pre>
-          <button type="button" class="btn btn-light" (click)="onEdit(command)" data-toggle="modal" data-target="#commandModal" title="Edit">
-            <svg id="i-edit" viewBox="0 0 32 32" width="16" height="16" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3">
-              <path d="M30 7 L25 2 5 22 3 29 10 27 Z M21 6 L26 11 Z M5 22 L10 27 Z" />
-            </svg>
-          </button>
-          <button type="button" class="btn btn-light mr-3" (click)="onDuplicate(command)" data-toggle="modal" data-target="#commandModal" title="Duplicate">
-            <svg id="i-clipboard" viewBox="0 0 32 32" width="16" height="16" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3">
-              <path d="M12 2 L12 6 20 6 20 2 12 2 Z M11 4 L6 4 6 30 26 30 26 4 21 4" />
-            </svg>
-          </button>
-          <div class="btn-group ml-auto">
-            <button type="button" class="btn btn-danger" (click)="trigger(command)">Trigger
-              <span class="badge badge-light">{{command.runs}}</span>
-            </button>
-          </div>
-        </div>
-        <small class="text-muted regex">{{command.voice}}&nbsp;</small>
+    <ng-template #itemTemplate let-item="item">
+      <div class="d-flex w-100">
+        <h5 class="text-primary clickable" (click)="onEdit(item.value); commandModal.show();">
+          {{item.value.id}}.
+          <a draggable="false">{{item.value.name}}</a>
+        </h5>
+        <small class="ml-auto" *ngIf="item.value.lastRunAt">{{item.value.lastRunAt | amTimeAgo}}</small>
       </div>
-    </div>
-    <button type="button" class="btn btn-block btn-outline-danger border-0 rounded-0 py-4" mwlConfirmationPopover popoverTitle="Are you sure?" popoverMessage="Reset all Runs and Last run statistics" placement="top" (confirm)="resetAllStats()">Reset All Stats</button>
+      <div class="d-flex w-100 align-items-center">
+        <pre class="my-1 mr-3"><code highlight [code]="item.value.script"></code></pre>
+        <button type="button" class="btn btn-light showOnHover text-hover-warning" (click)="onEdit(item.value); commandModal.show();" tooltip="Edit">
+          <app-bytesize-icon id="i-edit"></app-bytesize-icon>
+        </button>
+        <!-- <button type="button" class="btn btn-light showOnHover" (click)="onDuplicate(item.value); commandModal.show();" tooltip="Duplicate">
+          <app-bytesize-icon id="i-clipboard"></app-bytesize-icon>
+        </button> -->
+        <button type="button" class="btn btn-light showOnHover text-hover-danger mr-3" tooltip="Delete" mwlConfirmationPopover popoverTitle="Are you sure?" popoverMessage="Delete '{{item.value.name}}' permanently"
+          placement="{{item.value.id === 1 ? 'bottom' : 'top'}}" (confirm)="delete(item.value)">
+          <app-bytesize-icon id="i-trash"></app-bytesize-icon>
+        </button>
+        <div class="btn-group ml-auto">
+          <button type="button" class="btn btn-danger" (click)="trigger(item.value)">Trigger
+            <span class="badge badge-light">{{item.value.runs}}</span>
+          </button>
+        </div>
+      </div>
+      <small class="text-muted regex">{{item.value.voice}}&nbsp;</small>
+    </ng-template>
+
+    <bs-sortable [(ngModel)]="commands" [itemTemplate]="itemTemplate" (drop)="afterSort()" wrapperClass="list-group list-group-flush"
+      itemClass="sortable-item list-group-item list-group-item-action flex-column align-items-start"></bs-sortable>
+
+    <button type="button" class="btn btn-block btn-outline-danger border-0 rounded-0 py-4" mwlConfirmationPopover popoverTitle="Are you sure?"
+      popoverMessage="Reset all Runs and Last run statistics" placement="top" (confirm)="resetAllStats()">Reset All Stats</button>
   </div>
 
-  <div class="modal fade" id="commandModal" tabindex="-1">
+  <div bsModal #commandModal="bs-modal" class="modal fade" tabindex="-1">
     <div class="modal-dialog modal-lg">
       <form #commandForm="ngForm">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title">{{command.id ? 'Edit' : 'New'}}</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button type="button" class="close" (click)="commandModal.hide();">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
@@ -85,11 +85,9 @@
                   Script is required
                 </div>
                 <small class="form-text">
-                  <a href="http://roualin.fr/wp-content/uploads/2017/11/powershell-cheat-sheet.jpg" title="http://roualin.fr/wp-content/uploads/2017/11/powershell-cheat-sheet.jpg" class="text-muted">
+                  <a class="text-muted" placement="bottom" href="http://roualin.fr/wp-content/uploads/2017/11/powershell-cheat-sheet.jpg" tooltip="http://roualin.fr/wp-content/uploads/2017/11/powershell-cheat-sheet.jpg">
                     Powershell syntax
-                    <svg id="i-external" viewBox="0 0 32 32" width="12" height="12" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-                      <path d="M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18" />
-                    </svg>
+                    <app-bytesize-icon id="i-external" size="12" width="2"></app-bytesize-icon>
                   </a>
                 </small>
               </div>
@@ -100,11 +98,10 @@
                 <input [(ngModel)]="command.voice" [ngClass]="{'is-valid': voice.valid && !voice.pristine, 'is-invalid': !voice.valid && !voice.pristine}"
                   type="text" class="form-control" id="inputVoice" name="inputVoice" #voice="ngModel">
                 <small class="form-text">
-                  <a href="http://files.zeroturnaround.com/pdf/zt_regular-expressions-cheat-sheet.pdf" title="http://files.zeroturnaround.com/pdf/zt_regular-expressions-cheat-sheet.pdf" class="text-muted">
+                  <a class="text-muted" placement="bottom" href="http://files.zeroturnaround.com/pdf/zt_regular-expressions-cheat-sheet.pdf"
+                    tooltip="http://files.zeroturnaround.com/pdf/zt_regular-expressions-cheat-sheet.pdf">
                     Regular Expressions syntax
-                    <svg id="i-external" viewBox="0 0 32 32" width="12" height="12" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-                      <path d="M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18" />
-                    </svg>
+                    <app-bytesize-icon id="i-external" size="12" width="2"></app-bytesize-icon>
                   </a>
                 </small>
               </div>
@@ -137,9 +134,10 @@
             </ng-container>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-danger" mwlConfirmationPopover popoverTitle="Are you sure?" popoverMessage="Delete '{{command.name}}' permanently" placement="top" (confirm)="delete(); dismissBtn.click();" *ngIf="command.id">Delete</button>
-            <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal" #dismissBtn>Close</button>
-            <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="commandForm.form.valid && submit()">Save</button>
+            <button type="button" class="btn btn-danger" mwlConfirmationPopover popoverTitle="Are you sure?" popoverMessage="Delete '{{command.name}}' permanently"
+              placement="top" (confirm)="delete(); commandModal.hide();" *ngIf="command.id">Delete</button>
+            <button type="button" class="btn btn-secondary ml-auto" (click)="commandModal.hide()">Close</button>
+            <button type="button" class="btn btn-primary" (click)="commandForm.form.valid && submit(); commandModal.hide();">Save</button>
           </div>
         </div>
       </form>
