--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@ $primary: #2aa198;
 $secondary: #657b83;
 $warning: #b58900;
 $danger: #dc322f;
+$text-muted: $secondary;
 
 @import "node_modules/bootstrap/scss/bootstrap";
 
